CHANGED build folder to correct

--- a/.github/workflow.yml
+++ b/.github/workflow.yml
@@ -21,5 +21,5 @@ jobs:
         host: ${{ secrets.FTP_HOST }}
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        local_dir: dist
+        local_dir: .output
         remote_dir: /public_html/nuxt
