--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,21 @@
-# This is a workflow to deploy a Nuxt.js application to a DirectAdmin or cPanel server
-# using the FTP-KR extension and GitHub Actions.
-
 name: Deploy to server
 
-# The workflow will run on push events and pull request events
 on: [push, pull_request]
 
 jobs:
-  deploy:
-    # The job will run on an Ubuntu machine
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Install vinyl-ftp
-        run: npm install vinyl-ftp # Install the VINYL-FTP extension
-      - name: Deploy to server
-        # Set environment variables for the FTP host, username, and password
-        env:
-          FTP_HOST: ${{ secrets.FTP_HOST }}
-          FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
-          FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
-        # Run the VINYL-FTP script to deploy the code to the server
-        run: npx vinyl-ftp -h ${{ secrets.FTP_HOST }} -u ${{ secrets.FTP_USERNAME }} -p ${{ secrets.FTP_PASSWORD }} put -L .output /public_html/nuxt
+    - uses: actions/checkout@v3
+    - name: Install dependencies
+      run: npm ci
+    - name: Build application
+      run: npm run build
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Install grunt and grunt-ftp-deploy
+      run: npm install -g grunt grunt-ftp-deploy
+    - name: Deploy to server
+      run: grunt ftp-deploy --auth.host='${{ secrets.FTP_HOST }}' --auth.port=21 --auth.authKey='${{ secrets.FTP_AUTH_KEY }}' --src='dist' --dest='/public_html/nuxt'
