--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,28 @@
-name: Deploy to server
-
-on: [push, pull_request]
-
+on: push
+name: 🚀 Deploy website on push
 jobs:
-  build:
+  web-deploy:
+    name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Install dependencies
-      run: npm ci
-    - name: Install grunt
-      run: npm install grunt --save-dev
-    - name: Build application
-      run: npm run build
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-    - name: Install grunt-ftp-deploy
-      run: npm install grunt-ftp-deploy --save-dev
-    - name: Deploy to server
-      run: grunt ftp-deploy
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v2
+
+    - name: Use Node.js 16
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+      
+    - name: 🔨 Build Project
+      run: |
+        npm install
+        npm run build
+    
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@4.3.3
+      with:
+        server: ${{ secrets.FTP_HOST }}
+        username: ${{ secrets.FTP_USERNAME }}
+        password: ${{ secrets.FTP_PASSWORD }}
+        local_dir: dist
+        remote_dir: /public_html/nuxt
