--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "private": true,
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "nuxt": "3.0.0"
-  }
+	"private": true,
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"postinstall": "nuxt prepare"
+	},
+	"devDependencies": {
+		"nuxt": "3.0.0"
+	},
+	"dependencies": {
+		"aws-sdk": "^2.1304.0",
+		"@aws-sdk/client-dynamodb": "^3.215.0",
+		"@aws-sdk/lib-dynamodb": "^3.215.0",
+		"@vueuse/components": "^9.12",
+		"@vueuse/core": "^9.12"
+	}
 }
